--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
 
   </head>
   <body>
     <!-- Navbar --> 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -30,7 +31,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">About <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="#about">About <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">Interests</a></li>
             <li><a href="#">Skills</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Contact</a></li>
@@ -39,14 +41,76 @@
       </div><!-- /.container-fluid -->
     </nav>
     
+    <!-- The welcome banner -->
     <header>
-      <div class="row">
-          <div class="col-lg-12">
-              <h1>Hello</h1>
+      <div class="jumbotron">
+          <div class="container for-about">
+              <h1>Welcome to my personal website</h1>
+              <p>You can view what I've been up to on here</p>
           </div>
       </div>
     </header>
 
+    <!-- About -->
+    <a name="about"></a>
+    <section class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-5"></div>
+          <div class="col-sm-2"> 
+            <img src="img/profile.jpg" class="img-responsive img-circle">
+          </div>
+          <div class="col-sm-5"></div>
+        </div>
+        <hr>
+        <div class="row" id="about_info">
+          <h2> About Me </h2>
+          <p>Hi, thanks for stopping by my web page. My name is Edmond Wang, and I'm a graduate from the University of California, Davis with a B.S. in Computer Science and a minor in Psychology. I created this page to learn more about web development, and to post things about myself. I'm currently looking for software development career opportunities in the Bay Area, so feel free to message me if you're interested!</p>
+        </div>
+      </div>
+    </section>
+
+    <hr>
+
+    <!-- Skills -->
+    <a name="skills"></a>
+    <section class="skills">
+      <div class="container">
+        <h2> Skills </h2>
+        <div class="row">
+          <div class="col-md-4"> 
+            <div class="row">
+              <div class="col-md-2"> 
+                <i class="fa fa-code fa-2x icon" aria-hidden="true"></i>
+              </div>
+              <div class="col-md-10">
+                <p><strong> Programming Languages:</strong> <br> C, C++, C#, Objective-C, Swift, Java, HTML, CSS </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4"> 
+            <div class="row">
+              <div class="col-md-2"> 
+                <i class="fa fa-desktop fa-2x icon" aria-hidden="true"></i>
+              </div>
+              <div class="col-md-10">
+                <p><strong>Operating Systems:</strong><br> Windows, Mac OS X, Linux/UNIX </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4"> 
+            <div class="row">
+              <div class="col-md-2"> 
+                <i class="fa fa-language fa-2x icon" aria-hidden="true"></i>
+              </div>
+              <div class="col-md-10">
+                <p> <strong>Languages:</strong><br> Proficient in English and Cantonese.<br>Elementary understanding of Mandarin. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
