--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
 
     <hr>
 
+    <a name="Interests"></a>
+    <section class="interests"> 
+      <div class="container"> 
+        <h2>Interests</h2>
+      </div><!-- interests container -->
+    </section>
+
+    <hr>
+
     <!-- Skills -->
     <a name="skills"></a>
     <section class="skills">
@@ -108,8 +117,40 @@
               </div>
             </div>
           </div>
+        </div> <!-- skills row -->
+        <div class="row">
+          <div class="col-md-4"> 
+            <div class="row">
+              <div class="col-md-2"> 
+                <i class="fa fa-pencil fa-2x icon" aria-hidden="true"></i>
+              </div>
+              <div class="col-md-10">
+                <p>Hard working and independent. Able to learn with little oversight/handholding.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4"> 
+            <div class="row">
+              <div class="col-md-2"> 
+                <i class="fa fa-users fa-2x icon" aria-hidden="true"></i>
+              </div>
+              <div class="col-md-10">
+                <p>Experienced working in teams ranging from 2 members to 15 members to deliver exceptional products. I enjoy working with other people.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4"> 
+            <div class="row">
+              <div class="col-md-2"> 
+                <i class="fa fa-gamepad fa-2x icon" aria-hidden="true"></i>
+              </div>
+              <div class="col-md-10">
+                <p>Pretty good at Halo.</p>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
+      </div> <!-- skills container -->
     </section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
