Added Interests Section
Still need to add descriptions to each thumbnail, and buttons to
redirect to their own pages.

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-5"></div>
-          <div class="col-sm-2"> 
-            <img src="img/profile.jpg" class="img-responsive img-circle">
+          <div class="col-sm-2 text-center"> 
+            <img src="img/profile.jpg" class="img-responsive img-circle center-block">
           </div>
           <div class="col-sm-5"></div>
         </div>
         <hr>
         <div class="row" id="about_info">
           <h2> About Me </h2>
-          <p>Hi, thanks for stopping by my web page. My name is Edmond Wang, and I'm a graduate from the University of California, Davis with a B.S. in Computer Science and a minor in Psychology. I created this page to learn more about web development, and to post things about myself. I'm currently looking for software development career opportunities in the Bay Area, so feel free to message me if you're interested!</p>
+          <p>Hi, thanks for stopping by my web page. My name is Edmond Wang, and I'm a graduate from the University of California, Davis with a B.S. in Computer Science and a minor in Psychology. I created this page to learn more about web development, and to post things about myself. I'm currently looking for software development career opportunities in the Bay Area, so feel free to message me if you have an opening or just want to chat!</p>
         </div>
       </div>
     </section>
@@ -76,6 +76,34 @@
     <section class="interests"> 
       <div class="container"> 
         <h2>Interests</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="thumbnail">
+              <img src="img/travel.jpg" class="img-responsive">
+            </div>
+            <p><strong>Travel</strong></p>
+          </div>
+          <div class="col-md-6">
+            <div class="thumbnail">
+              <img src="img/sports.jpg" class="img-responsive">
+            </div>
+            <p><strong>Sports Fan</strong></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="thumbnail">
+              <img src="img/writing.jpg" class="img-responsive">
+            </div>
+            <p><strong>Writing</strong></p>
+          </div>
+          <div class="col-md-6">
+            <div class="thumbnail">
+              <img src="img/reading.jpg" class="img-responsive">
+            </div>
+            <p><strong>Reading</strong></p>
+          </div>
+        </div>
       </div><!-- interests container -->
     </section>
 
@@ -103,7 +131,7 @@
                 <i class="fa fa-desktop fa-2x icon" aria-hidden="true"></i>
               </div>
               <div class="col-md-10">
-                <p><strong>Operating Systems:</strong><br> Windows, Mac OS X, Linux/UNIX </p>
+                <p><strong>Operating Systems:</strong><br>Windows, Mac OS X, Linux/UNIX, Android, iOS </p>
               </div>
             </div>
           </div>
