--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   </head>
   <body>
     <!-- Navbar --> 
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
+            <!-- These are the number of lines on the dropdown menu symbol-->
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -32,10 +33,10 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#about">About <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Interests</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#interests">Interests</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contacts">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -43,10 +44,12 @@
     
     <!-- The welcome banner -->
     <header>
-      <div class="jumbotron">
-          <div class="container for-about">
-              <h1>Welcome to my personal website</h1>
-              <p>You can view what I've been up to on here</p>
+      <div class="jumbotron" id="header-jumbotron">
+          <div class="container header-info">
+              <h1>EDMOND WANG</h1>
+              <p>Look around to learn more about me</p>
+              <hr>
+              <button type="button" class="btn btn-default"><a href="#about">Learn More</a></button>
           </div>
       </div>
     </header>
@@ -72,7 +75,7 @@
 
     <hr>
 
-    <a name="Interests"></a>
+    <a name="interests"></a>
     <section class="interests"> 
       <div class="container"> 
         <h2>Interests</h2>
@@ -80,28 +83,28 @@
           <div class="col-md-6">
             <div class="thumbnail">
               <img src="img/travel.jpg" class="img-responsive">
+              <h2><span>Travel</span></h2>
             </div>
-            <p><strong>Travel</strong></p>
           </div>
           <div class="col-md-6">
             <div class="thumbnail">
               <img src="img/sports.jpg" class="img-responsive">
+              <h2><span>Sports Fan</span></h2>
             </div>
-            <p><strong>Sports Fan</strong></p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <div class="thumbnail">
               <img src="img/writing.jpg" class="img-responsive">
+              <h2><span>Writing</span></h2>
             </div>
-            <p><strong>Writing</strong></p>
           </div>
           <div class="col-md-6">
             <div class="thumbnail">
               <img src="img/reading.jpg" class="img-responsive">
+              <h2><span>Reading</span></h2>
             </div>
-            <p><strong>Reading</strong></p>
           </div>
         </div>
       </div><!-- interests container -->
