Redid Interests and Skills Sections

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="row">
           <div class="col-sm-5"></div>
           <div class="col-sm-2 text-center"> 
-            <img src="img/profile.jpg" class="img-responsive img-circle center-block">
+            <img src="img/prof-pic.jpg" class="img-responsive img-circle center-block">
           </div>
           <div class="col-sm-5"></div>
         </div>
@@ -73,36 +73,36 @@
       </div>
     </section>
 
-    <hr>
-
     <a name="interests"></a>
     <section class="interests"> 
       <div class="container"> 
         <h2>Interests</h2>
+        <hr>
+        <p> Here are a few of the things I like doing </p>
         <div class="row">
-          <div class="col-md-6">
-            <div class="thumbnail">
+          <div class="col-md-3">
+            <div class="picture-container">
               <img src="img/travel.jpg" class="img-responsive">
               <h2><span>Travel</span></h2>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="thumbnail">
+          <div class="col-md-3">
+            <div class="picture-container">
               <img src="img/sports.jpg" class="img-responsive">
               <h2><span>Sports Fan</span></h2>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="thumbnail">
+          <div class="col-md-3">
+            <div class="picture-container">
               <img src="img/writing.jpg" class="img-responsive">
               <h2><span>Writing</span></h2>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="thumbnail">
-              <img src="img/reading.jpg" class="img-responsive">
+          <div class="col-md-3">
+            <div class="picture-container">
+              <div class="overlay">
+                <img src="img/reading.jpg" class="img-responsive">
+              </div>
               <h2><span>Reading</span></h2>
             </div>
           </div>
@@ -110,7 +110,6 @@
       </div><!-- interests container -->
     </section>
 
-    <hr>
 
     <!-- Skills -->
     <a name="skills"></a>
