--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           </div>
           <div class="col-sm-5"></div>
         </div>
+
         <hr>
         <div class="row" id="about_info">
           <h2> About Me </h2>
@@ -75,10 +76,12 @@
 
     <a name="interests"></a>
     <section class="interests"> 
-      <div class="container"> 
-        <h2>Interests</h2>
-        <hr>
-        <p> Here are a few of the things I like doing </p>
+      <div class="container-outer"> 
+        <div class="container">
+          <h2>Interests</h2>
+          <hr>
+          <p> Here are a few of the things I like doing </p>
+        </div>
         <div class="row">
           <div class="col-md-3">
             <div class="picture-container">
@@ -88,7 +91,9 @@
           </div>
           <div class="col-md-3">
             <div class="picture-container">
+              <a href="#">
               <img src="img/sports.jpg" class="img-responsive">
+              </a>
               <h2><span>Sports Fan</span></h2>
             </div>
           </div>
@@ -116,6 +121,7 @@
     <section class="skills">
       <div class="container">
         <h2> Skills </h2>
+        <hr>
         <div class="row">
           <div class="col-md-4"> 
             <div class="row">
@@ -182,7 +188,22 @@
         </div>
       </div> <!-- skills container -->
     </section>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+
+    
+    <!-- contact -->
+    <section class="contact">
+    <div class="container">
+            
+    </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <p>&copy; Edmond Wang 2017. All rights reserved.</p>
+      </div>
+    </footer>
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
