Added contact buttons

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <hr>
         <div class="row" id="about_info">
           <h2> About Me </h2>
-          <p>Hi, thanks for stopping by my web page. My name is Edmond Wang, and I'm a graduate from the University of California, Davis with a B.S. in Computer Science and a minor in Psychology. I created this page to learn more about web development, and to post things about myself. I'm currently looking for software development career opportunities in the Bay Area, so feel free to message me if you have an opening or just want to chat!</p>
+          <p>Hi, thanks for stopping by my web page. My name is Edmond Wang, and I'm a graduate from the University of California, Davis with a B.S. in Computer Science and a minor in Psychology. I created this page to learn more about web development, and to post things about myself. Unfortunately, I have come to find that at the end of this project, I still know absolutely nothing about how I should best go about spinning a web. I'm currently looking for software development career opportunities in the Bay Area, so feel free to message me if you have an opening or just want to chat!</p>
         </div>
       </div>
     </section>
@@ -192,9 +192,18 @@
     
     <!-- contact -->
     <section class="contact">
-    <div class="container">
-            
-    </div>
+      <div class="container">
+        <p> You can check out my Linkedin and Github down below. <br> Send me an email if you'd like to talk!<br> edmondmwang@gmail.com</p>
+        <a href="mailto:edmondmwang@gmail.com" target="blank">
+         <i class="fa fa-envelope-o fa-2x social-icon" aria-hidden="true"></i>    
+        </a> 
+        <a href="https://www.linkedin.com/in/edmondmw/" target="blank">
+         <i class="fa fa-linkedin-square fa-2x social-icon" aria-hidden="true"></i>    
+        </a>
+        <a href="https://github.com/edmondmw" target="blank">
+         <i class="fa fa-github fa-2x social-icon" aria-hidden="true"></i>    
+        </a>
+      </div>
     </section>
 
     <footer>
