Added Experience section and removed a lot of unnecessary files

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <li class="active"><a href="#about">About <span class="sr-only">(current)</span></a></li>
             <li><a href="#interests">Interests</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contacts">Contact</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -47,7 +47,7 @@
       <div class="jumbotron" id="header-jumbotron">
           <div class="container header-info">
               <h1>EDMOND WANG</h1>
-              <p>Look around to learn more about me</p>
+              <p>Look around to learn more about me. WORK IN PROGRESS</p>
               <hr>
               <button type="button" class="btn btn-default"><a href="#about">Learn More</a></button>
           </div>
@@ -69,7 +69,7 @@
         <hr>
         <div class="row" id="about_info">
           <h2> About Me </h2>
-          <p>Hi, thanks for stopping by my web page. My name is Edmond Wang, and I'm a graduate from the University of California, Davis with a B.S. in Computer Science and a minor in Psychology. I created this page to learn more about web development, and to post things about myself. Unfortunately, I have come to find that at the end of this project, I still know absolutely nothing about how I should best go about spinning a web. I'm currently looking for software development career opportunities in the Bay Area, so feel free to message me if you have an opening or just want to chat!</p>
+          <p>Hi, thanks for stopping by my web page. My name is Edmond Wang, and I'm a graduate from the University of California, Davis with a B.S. in Computer Science and a minor in Psychology. I created this page to learn more about web development, and to post things about myself. Unfortunately, I have come to find that as this project comes to a close, I am still no better at catching insects than I was when I first started this endeavor. I'm currently looking for software development career opportunities in the Bay Area, so feel free to message me if you have an opening or just want to chat!</p>
         </div>
       </div>
     </section>
@@ -84,32 +84,38 @@
         </div>
         <div class="row">
           <div class="col-md-3">
-            <div class="picture-container">
-              <img src="img/travel.jpg" class="img-responsive">
-              <h2><span>Travel</span></h2>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="picture-container">
-              <a href="#">
-              <img src="img/sports.jpg" class="img-responsive">
-              </a>
-              <h2><span>Sports Fan</span></h2>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="picture-container">
-              <img src="img/writing.jpg" class="img-responsive">
-              <h2><span>Writing</span></h2>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="picture-container">
-              <div class="overlay">
-                <img src="img/reading.jpg" class="img-responsive">
+            <a href="#">
+              <div class="picture-container">
+                <img src="img/travel.jpg" class="img-responsive">
+                <h2><span>Travel</span></h2>
               </div>
-              <h2><span>Reading</span></h2>
-            </div>
+            </a>
+          </div>
+          <div class="col-md-3">              
+            <a href="#">
+              <div class="picture-container">
+                <img src="img/sports.jpg" class="img-responsive">
+                <h2><span>Sports Fan</span></h2>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <div class="picture-container">
+                <img src="img/writing.jpg" class="img-responsive">
+                <h2><span>Writing</span></h2>
+              </div>
+            </a>  
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <div class="picture-container">
+                <div class="overlay">
+                  <img src="img/reading.jpg" class="img-responsive">
+                </div>
+                <h2><span>Reading</span></h2>
+              </div>
+            </a>
           </div>
         </div>
       </div><!-- interests container -->
@@ -189,8 +195,104 @@
       </div> <!-- skills container -->
     </section>
 
-    
+    <!-- Experience -->
+    <section class="experience">
+      <div class="container">
+        <h2>Experience</h2>
+        <hr>
+        <div class="row">
+          <div class="col-md-3  experience-img">
+            <a href="http://www.kyndapp.com" target="blank">
+              <img src="img/kynd-logo.png" class="img-responsive center-block">
+            </a>
+          </div>
+          <div class="col-md-9">
+            <p><strong>iOS Developer Intern</strong><br>
+            Kynd<br>
+            August 2016 - November 2016<br><br>
+            - Coordinated with team members to address various design challenges and implement new features.<br>
+            - Learned Objective-C to understand existing code before converting the project to Swift.<br>
+            - Learned basic PHP to write web API for the application.<br>
+            - Performed database management and restructured the entire database.<br>
+            - Managed deployment activities such as the distribution of builds to internal devices.</p>
+          </div>
+        </div>
+        <hr class="experience-hr">
+        <div class="row">
+          <div class="col-md-3 experience-img">
+            <a href="http://www.jcyc.org/ target="blank">
+              <img src="img/jcyc-logo.png" class="img-responsive center-block">
+            </a>
+          </div>
+          <div class="col-md-9">
+            <p><strong>Academic Tutor</strong><br>
+            JCYC<br>
+            September 2016 - December 2016<br><br>
+            -Tutored high school students in English, math, and physics. <br>
+            -Provided SAT prep sessions.<br>
+            -Recorded and monitored students' academic progress.</p>
+          </div>
+        </div>
+        <hr class="experience-hr">
+        <div class="row">
+          <div class="col-md-3 experience-img">
+            <a href="https://itunes.apple.com/us/app/produce-facts/id1192176504?mt=8 target="blank">
+              <img src="img/produce-facts-logo.png" class="img-responsive center-block">
+            </a>
+          </div>
+          <div class="col-md-9">
+            <p><strong>Produce Facts Mobile App</strong><br>
+            UC Davis<br>
+            January 2016 - June 2016<br><br>
+            -A member of a 4 person team using Agile methodology.<br>
+            -Collaborated with clients bi-weekly, and implemented any changes in response to their feedback.<br>
+            -Worked on search functionality, grid/table views, layouts, and troubleshooting. <br>
+            -Created a user guide detailing an overview of the application.</p>
+          </div>
+        </div>
+        <hr class="experience-hr">
+        <div class="row">
+          <div class="col-md-3 experience-img">
+            <img src="img/fortnitta.png" class="img-responsive center-block">
+          </div>
+          <div class="col-md-9">
+            <p><strong>Fort Nitta</strong><br>
+            UC Davis<br>
+            January 2015 - March 2015<br><br>
+            -A member of a 15-person team that worked together to create a Windows port of the 1990 Rampart Atari game.<br>
+            -Developed single player, multiplayer, and settings options.<br>
+            -Collaborated with other teams to implement AI and networking functionality.<br>
+            -Learned to use a tools/technologies such as C#, XNA framework, Visual Studio, and Github.</p>
+          </div>
+        </div>
+        <hr class="experience-hr">
+        <div class="row">
+          <div class="col-md-3 experience-img">
+            <img src="img/ucdavis-logo.png" class="img-responsive center-block">
+          </div>
+          <div class="col-md-9">
+            <p><strong>University of California, Davis</strong><br>
+            B.S. Computer Science<br>
+            Minor in Psychology<br>
+            September 2012 - June 2016<br><br>
+            <strong>Related Courses</strong><br>
+            -Algorithm Design<br>
+            -Artificial Intelligence<br>
+            -Computer Architecture<br>
+            -Computer Networks <br>
+            -Computer Security<br>
+            -Database Systems<br>
+            -Data Structures and Programming<br>
+            -Machine Dependent Programming<br>
+            -Programming Languages<br>
+            -Software Engineering</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- contact -->
+    <a name="contact"></a>
     <section class="contact">
       <div class="container">
         <p> You can check out my Linkedin and Github down below. <br> Send me an email if you'd like to talk!<br> edmondmwang@gmail.com</p>
