Added experience a tag

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
     </section>
 
     <!-- Experience -->
+    <a name="experience"></a>
     <section class="experience">
       <div class="container">
         <h2>Experience</h2>
