removed an extra picture

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <hr class="experience-hr">
         <div class="row">
           <div class="col-md-3 experience-img">
-            <img src="img/fortnitta.png" class="img-responsive center-block">
+            <img src="img/fortnitta.PNG" class="img-responsive center-block">
           </div>
           <div class="col-md-9">
             <p><strong>Fort Nitta</strong><br>
