fixed jcyc link

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <hr class="experience-hr">
         <div class="row">
           <div class="col-md-3 experience-img">
-            <a href="http://www.jcyc.org/ target="blank">
+            <a href="http://www.jcyc.org/" target="blank">
               <img src="img/jcyc-logo.png" class="img-responsive center-block">
             </a>
           </div>
