Fixed learn more button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
               <h1>EDMOND WANG</h1>
               <hr>
               <p>Look around to learn more about me. WORK IN PROGRESS<br><br><br></p>
-              <button type="button" class="btn-outline"><a href="#about">Learn More</a></button>
+              <a class="btn-outline" href="#about">Learn More</a>
+              <!-- <button type="button" class="btn-outline"><a href="#about">Learn More</a></button> -->
           </div>
       </div>
     </header>
