Edited navbar color

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#about">About <span class="sr-only">(current)</span></a></li>
+            <li><a href="https://edmondmw.tumblr.com">Blog</a></li>
             <li><a href="#interests">Interests</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#experience">Experience</a></li>
@@ -48,9 +49,8 @@
           <div class="container header-info">
               <h1>EDMOND WANG</h1>
               <hr>
-              <p>Look around to learn more about me. WORK IN PROGRESS<br><br><br></p>
+              <p>Look around to learn more about me <br><br><br></p>
               <a class="btn-outline" href="#about">Learn More</a>
-              <!-- <button type="button" class="btn-outline"><a href="#about">Learn More</a></button> -->
           </div>
       </div>
     </header>
@@ -85,38 +85,30 @@
         </div>
         <div class="row">
           <div class="col-md-3">
-            <a href="#">
-              <div class="picture-container">
-                <img src="img/travel.jpg" class="img-responsive">
-                <h2><span>Travel</span></h2>
-              </div>
-            </a>
+            <div class="picture-container">
+              <img src="img/travel.jpg" class="img-responsive">
+              <h2><span>Travel</span></h2>
+            </div>
           </div>
           <div class="col-md-3">              
-            <a href="#">
-              <div class="picture-container">
-                <img src="img/sports.jpg" class="img-responsive">
-                <h2><span>Sports Fan</span></h2>
-              </div>
-            </a>
+            <div class="picture-container">
+              <img src="img/sports.jpg" class="img-responsive">
+              <h2><span>Basketball</span></h2>
+            </div>
           </div>
           <div class="col-md-3">
-            <a href="#">
-              <div class="picture-container">
-                <img src="img/writing.jpg" class="img-responsive">
-                <h2><span>Writing</span></h2>
-              </div>
-            </a>  
+            <div class="picture-container">
+              <img src="img/writing.jpg" class="img-responsive">
+              <h2><span>Writing</span></h2>
+            </div>
           </div>
           <div class="col-md-3">
-            <a href="#">
-              <div class="picture-container">
-                <div class="overlay">
-                  <img src="img/reading.jpg" class="img-responsive">
-                </div>
-                <h2><span>Reading</span></h2>
+            <div class="picture-container">
+              <div class="overlay">
+                <img src="img/reading.jpg" class="img-responsive">
               </div>
-            </a>
+              <h2><span>Reading</span></h2>
+            </div>
           </div>
         </div>
       </div><!-- interests container -->
